<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string-array name="gender_arrays">
        <item></item>
        <item>Guy</item>
        <item>Girl</item>
    </string-array>

    <string-array name="municipalities_arrays">
        <item>|</item>
        <item>borgeraabenraakommune|Aabenraa Kommune</item>
        <item>borgeraalborgkommune|Aalborg Kommune</item>
        <item>borgeraarhuskommune|Aarhus Kommune</item>
        <item>borgerearoekommune|Ærø Kommune</item>
        <item>borgeralbertslundkommune|Albertslund Kommune</item>
        <item>borgeralleroedkommune|Allerød Kommune</item>
        <item>borgerassenskommune|Assens Kommune</item>
        <item>borgerballerupkommune|Ballerup Kommune</item>
        <item>borgerbillundkommune|Billund kommune</item>
        <item>borgerbornholmkommune|Bornholms Regionskommune</item>
        <item>borgerbroendbykommune|Brøndby Kommune</item>
        <item>borgerbroenderslevkommune|Brønderslev Kommune</item>
        <item>borgerdragoerkommune|Dragør Kommune</item>
        <item>borgeregedalkommune|Egedal Kommune</item>
        <item>borgeresbjergkommune|Esbjerg Kommune</item>
        <item>borgerfaaborgmidtfynkommune|Faaborg-Midtfyn Kommune</item>
        <item>borgerfanoekommune|Fanø Kommune</item>
        <item>borgerfavrskovkommune|Favrskov Kommune</item>
        <item>borgerfaxekommune|Faxe Kommune</item>
        <item>borgerfredensborgkommune|Fredensborg Kommune</item>
        <item>borgerfredericiakommune|Fredericia Kommune</item>
        <item>borgerfrederiksbergkommune|Frederiksberg Kommune</item>
        <item>borgerfrederikshavnkommune|Frederikshavn Kommune</item>
        <item>borgerfrederikssundkommune|Frederikssund Kommune</item>
        <item>borgerfuresoekommune|Furesø Kommune</item>
        <item>borgergentoftekommune|Gentofte Kommune</item>
        <item>borgergladsaxekommune|Gladsaxe Kommune</item>
        <item>borgerglostrupkommune|Glostrup Kommune</item>
        <item>borgergrevekommune|Greve Kommune</item>
        <item>borgergribskovkommune|Gribskov Kommune</item>
        <item>borgerguldborgsundkommune|Guldborgsund Kommune</item>
        <item>borgerhaderslevkommune|Haderslev Kommune</item>
        <item>borgerhalsnaeskommune|Halsnæs Kommune</item>
        <item>borgerhedenstedkommune|Hedensted Kommune</item>
        <item>borgerhelsingoerkommune|Helsingør Kommune</item>
        <item>borgerherlevkommune|Herlev Kommune</item>
        <item>borgerherningkommune|Herning Kommune</item>
        <item>borgerhilleroedkommune|Hillerød Kommune</item>
        <item>borgerhjoerringkommune|Hjørring Kommune</item>
        <item>borgerhoejetaastrupkommune|Høje-Taastrup Kommune</item>
        <item>borgerholbaekkommune|Holbæk Kommune</item>
        <item>borgerholstebrokommune|Holstebro Kommune</item>
        <item>borgerhorsenskommune|Horsens Kommune</item>
        <item>borgerhoersholmkommune|Hørsholm Kommune</item>
        <item>borgerhvidovrekommune|Hvidovre Kommune</item>
        <item>borgerikastbrandekommune|Ikast-Brande Kommune</item>
        <item>borgerishoejkommune|Ishøj Kommune</item>
        <item>borgerjammerbugtkommune|Jammerbugt Kommune</item>
        <item>borgerkalundborgkommune|Kalundborg Kommune</item>
        <item>borgerkertemindekommune|Kerteminde Kommune</item>
        <item>borgerkk|Københavns Kommune</item>
        <item>borgerkoegekommune|Køge Kommune</item>
        <item>borgerkoldingkommune|Kolding Kommune</item>
        <item>borgerlaesoekommune|Læsø Kommune</item>
        <item>borgerlangelandkommune|Langeland Kommune</item>
        <item>borgerlejrekommune|Lejre Kommune</item>
        <item>borgerlemvigkommune|Lemvig Kommune</item>
        <item>borgerlollandkommune|Lolland Kommune</item>
        <item>borgerlyngbytaarbaekkommune|Lyngby-Taarbæk Kommune</item>
        <item>borgermariagerfjordkommune|Mariagerfjord Kommune</item>
        <item>borgermiddelfartkommune|Middelfart Kommune</item>
        <item>borgermorsoekommune|Morsø Kommune</item>
        <item>borgernaestvedkommune|Næstved Kommune</item>
        <item>borgernorddjurskommune|Norddjurs Kommune</item>
        <item>borgernordfynskommune|Nordfyns Kommune</item>
        <item>borgernyborgkommune|Nyborg Kommune</item>
        <item>borgerodderkommune|Odder Kommune</item>
        <item>borgerodensekommune|Odense Kommune</item>
        <item>borgerodsherredkommune|Odsherred Kommune</item>
        <item>borgerranderskommune|Randers Kommune</item>
        <item>borgerrebildkommune|Rebild Kommune</item>
        <item>borgerringkoebingskjernkommune|Ringkøbing-Skjern Kommune</item>
        <item>borgerringstedkommune|Ringsted Kommune</item>
        <item>borgerroedovrekommune|Rødovre Kommune</item>
        <item>borgerroskildekommune|Roskilde Kommune</item>
        <item>borgerrudersdalkommune|Rudersdal Kommune</item>
        <item>borgersamsoekommune|Samsø Kommune</item>
        <item>borgersilkeborgkommune|Silkeborg Kommune</item>
        <item>borgerskanderborgkommune|Skanderborg Kommune</item>
        <item>borgerskivekommune|Skive Kommune</item>
        <item>borgerslagelsekommune|Slagelse Kommune</item>
        <item>borgersolroedkommune|Solrød Kommune</item>
        <item>borgersoenderborgkommune|Sønderborg Kommune</item>
        <item>borgersoroekommune|Sorø Kommune</item>
        <item>borgerstevnskommune|Stevns Kommune</item>
        <item>borgerstruerkommune|Struer Kommune</item>
        <item>borgersvendborgkommune|Svendborg Kommune</item>
        <item>borgersyddjurskommune|Syddjurs Kommune</item>
        <item>borgertaarnbykommune|T&#229;rnby Kommune</item>
        <item>borgerthistedkommune|Thisted Kommune</item>
        <item>borgertoenderkommune|Tønder Kommune</item>
        <item>borgervallensbaekkommune|Vallensbæk Kommune</item>
        <item>borgervardekommune|Varde Kommune</item>
        <item>borgervejenkommune|Vejen Kommune</item>
        <item>borgervejlekommune|Vejle Kommune</item>
        <item>borgervesthimmerlandskommune|Vesthimmerlands Kommune</item>
        <item>borgerviborgkommune|Viborg Kommune</item>
        <item>borgervordingborgkommune|Vordingborg Kommune</item>
    </string-array>

    <string name="app_name">eMia</string>
    <string name="nav_header_title">eMia</string>
    <string name="contentDescription">Photo</string>

    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_filter">Filter</string>
    <string name="login_label">Log In</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Favorite Posts</string>
    <string name="backbutton">Backbutton</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="photo_label">Photo</string>
    <string name="user_year_birth">Year of birth</string>
    <string name="user_gender">I\'m</string>
    <string name="user_address">Municipality</string>
    <string name="hint_user_address">Please enter your address</string>
    <string name="hint_user_gender">Please enter gender</string>
    <string name="hint_year_birth">Please enter your year of birth</string>
    <string name="hint_user_name">Please enter your name</string>
    <string name="label_text_comment">Kommentarer</string>
    <string name="label_text_comment_description">Ingen har endnu skrevet en kommentar til denne bobl. Skal du være den første?</string>
    <string name="post_comment_placeholder">Skriv en kommentar...</string>
    <string name="new_post_title">New Post</string>
    <string name="my_profile_title">My Profile</string>
    <string name="sign_in_title">Log In</string>

    <string name="filter_title">Filters</string>
    <string name="filter_show_me">Show me</string>
    <string name="filter_show_me_guis">Guis</string>
    <string name="filter_show_me_girls">Girls</string>
    <string name="filter_show_me_both">Both</string>
    <string name="filter_with_status">With status</string>
    <string name="filter_status_all">All</string>
    <string name="filter_status_favorite">My Favorite</string>
    <string name="filter_age">Age</string>
    <string name="filter_municipality">Municipality</string>

    <string name="add_photo">Please add photo</string>
    <string name="waiting_post">Posting...</string>
    <string name="field_required">Required</string>
    <string name="password_too_short">Password is too short</string>
    <string name="signup_failed">Sign Up Failed</string>
    <string name="signin_failed">Sign In Failed</string>

</resources>
