<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="dk.coded.emia.View.activity.MyProfileActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f2ffffff"
        android:visibility="visible">

        <include
            android:id="@+id/nav_header"
            layout="@layout/post_detail_nav_header"
            android:layout_height="@dimen/navbar_height"
            android:layout_width="match_parent" />

        <TableLayout
            android:id="@+id/user_profile_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nav_header"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_name_label"
                    android:height="24dp"
                    android:text="@string/name_label"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/user_name_text"
                    android:layout_marginLeft="15dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_user_name"
                    android:maxLines="1" />

            </TableRow>


            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_email_label"
                    android:text="@string/email_label"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/user_email_text"
                    android:layout_marginLeft="15dp"
                    android:text="sergey.krotkih@gmail.com"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_year_birth_label"
                    android:text="@string/user_year_birth"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/yerarbirth_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_gender_label"
                    android:text="@string/user_gender"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender_arrays" />

            </TableRow>

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_address_label"
                    android:text="@string/user_address"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/municipality_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_photo_label"
                    android:text="@string/photo_label"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/toolbar_text_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/noimage" />

            </TableRow>

        </TableLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_submit_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:backgroundTint="@color/colorPrimary"
            android:layout_margin="16dp"
            android:src="@drawable/ic_done_black_24dp"/>

    </RelativeLayout>

    <include
        layout="@layout/notification"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</RelativeLayout>
