<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dk.coded.emia.View.activity.PostDetailActivity">

    <include
        android:id="@+id/nav_header"
        layout="@layout/post_detail_nav_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navbar_height"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/post_details_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/nav_header">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="1" >

                <TableRow>
                    <include
                        android:id="@+id/post_author_layout"
                        layout="@layout/include_post_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentLeft="true" />
                </TableRow>

                <TableRow>

                    <include
                        android:id="@+id/post_text_layout"
                        layout="@layout/include_post_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp" />
                </TableRow>

                <TableRow>

                    <com.github.chrisbanes.photoview.PhotoView
                        android:id="@+id/photoImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/contentDescription"
                        android:visibility="visible" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/post_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/post_description_text_size"
                        android:textColor="@color/black"
                        android:text="Date" />
                </TableRow>

                <TableRow>

                    <RelativeLayout android:id="@+id/RelativeLayout01"
                        android:layout_marginTop="15dp"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp">

                        <LinearLayout
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/colorPrimary"
                                android:src="@drawable/envelope"
                                android:scaleType="centerCrop"
                                android:layout_toLeftOf="@+id/sendEmailButton" />

                            <Button
                                android:id="@+id/sendEmailButton"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:text="Skriv privat besked"
                                android:padding="3dp"
                                android:background="@color/colorPrimary"
                                android:textSize="@dimen/post_send_email_button_size"
                                android:textColor="@android:color/white" />

                        </LinearLayout>

                    </RelativeLayout>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/post_title_text_size"
                        android:textColor="@color/black"
                        android:text="@string/label_text_comment" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/post_description_text_size"
                        android:textColor="@color/black"
                        android:text="@string/label_text_comment_description" />

                </TableRow>

                <TableRow>
                    <LinearLayout
                        android:id="@+id/comment_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1.0">

                        <EditText
                            android:id="@+id/field_comment_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:hint="@string/post_comment_placeholder"
                            android:maxLines="1" />

                        <Button
                            android:id="@+id/post_comment_button"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:textColor="@color/colorPrimary"
                            android:text="Send" />

                    </LinearLayout>
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_comments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:listitem="@layout/item_comment" />
                    </LinearLayout>
                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </ScrollView>

    <include
        layout="@layout/notification"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>


</RelativeLayout>
